Displaying the available skarab boards for each cbf proxy

--- a/app/scheduler/subarray-resources/subarray-resources.html
+++ b/app/scheduler/subarray-resources/subarray-resources.html
@@ -151,8 +151,8 @@
 
                             <span class="resource-sensor-status-item" ng-class="vm.sensorClass(parent.vm.sensorValues[resourceAlloc[0] + '_ridx_position'].status)"
                                 style="position: absolute; left: 90px; bottom: 4px; font-size: 12px" >
-                                {{parent.vm.sensorValues[resourceAlloc[0] + '_boards_marked_up'].value}}
-                                <md-tooltip>{{(vm.boardsMarkedUp()==undefined ? '---' : vm.boardsMarkedUp()) + '/' + (vm.totalBoards()==undefined ? '---' : vm.totalBoards())}}  Available SKARAB Boards</md-tooltip>
+                                {{vm.boardsMarkedUp(resourceAlloc[0])}}
+                                <md-tooltip>{{(vm.boardsMarkedUp(resourceAlloc[0])==undefined ? '---' : vm.boardsMarkedUp(resourceAlloc[0])) + '/' + (vm.totalBoards(resourceAlloc[0])==undefined ? '---' : vm.totalBoards(resourceAlloc[0]))}}  Available SKARAB Boards</md-tooltip>
                             </span>
 
                             <div flex layout="column" layout-wrap class="gui-urls-link-container">
