Removing the "Boards" part when displaying totals

--- a/app/scheduler/subarray-resources/subarray-resources.html
+++ b/app/scheduler/subarray-resources/subarray-resources.html
@@ -157,7 +157,7 @@
                                     Available: {{parent.vm.sensorValues[resourceAlloc[0] + '_boards_marked_up'].value}}<br>
                                     In Use: {{parent.vm.sensorValues[resourceAlloc[0] + '_boards_marked_assigned'].value}}<br>
                                     Standby: {{parent.vm.sensorValues[resourceAlloc[0] + '_boards_marked_standby'].value}}<br>
-                                    Total Boards: {{vm.totalBoards(resourceAlloc[0])}}
+                                    Total: {{vm.totalBoards(resourceAlloc[0])}}
                                 </md-tooltip>
                             </span>
 
