--- a/app/scheduler/subarray-resources/subarray-resources.html
+++ b/app/scheduler/subarray-resources/subarray-resources.html
@@ -147,8 +147,8 @@
                             </span>
 
                             <span class="icon-button fa fa-square"
-                                ng-class="{'nominal-sensor-list-item': vm.isReceiverReadySensor(resourceAlloc[0]).value === true,
-                                'warn-sensor-list-item': vm.isReceiverReadySensor(resourceAlloc[0]).value === false}"
+                                ng-class="{'nominal-sensor-list-item': vm.isReceiverReadySensor(resourceAlloc[0]).value == true,
+                                'warn-sensor-list-item': vm.isReceiverReadySensor(resourceAlloc[0]).value == false || vm.isReceiverReadySensor(resourceAlloc[0]).status != 'nominal'}"
                                 ng-click="vm.navigateToReceiverReadySensorList(resourceAlloc[0]); $event.stopPropagation()"
                                 ng-if="vm.isReceiverReadySensor(resourceAlloc[0]).value == true || vm.isReceiverReadySensor(resourceAlloc[0]).value == false"
                                 style="position: absolute; left: 100px; bottom: 25px">
