fix mistakes in the logic and simplifed the function for receiver ready sensor

--- a/app/scheduler/subarray-resources/subarray-resources.html
+++ b/app/scheduler/subarray-resources/subarray-resources.html
@@ -147,14 +147,15 @@
                             </span>
 
                             <span class="icon-button fa fa-square"
-                                ng-class="{'nominal-sensor-list-item': vm.isReceiverReadySensor(resourceAlloc[0]).value == true,
-                                'warn-sensor-list-item': vm.isReceiverReadySensor(resourceAlloc[0]).value == false
-                                || vm.isReceiverReadySensor(resourceAlloc[0]).status != 'nominal'}"
+                                ng-class="{'nominal-sensor-list-item': vm.isReceiverReady(resourceAlloc[0]),
+                                           'warn-sensor-list-item': !vm.isReceiverReady(resourceAlloc[0])}"
                                 ng-click="vm.navigateToReceiverReadySensorList(resourceAlloc[0]); $event.stopPropagation()"
-                                ng-if="vm.isReceiverReadySensor(resourceAlloc[0]).value == true || vm.isReceiverReadySensor(resourceAlloc[0]).value == false"
+                                ng-if="vm.isReceiverReadySensor(resourceAlloc[0]) != undefined"
                                 style="position: absolute; left: 100px; bottom: 25px">
                                 <md-tooltip class="text-capitalize">
-                                    {{vm.isReceiverReadySensor(resourceAlloc[0]).value == true ? vm.subarray.band + '-band Receiver Ready' : vm.subarray.band + '-band Receiver Not Ready'}}
+                                    {{vm.isReceiverReady(resourceAlloc[0]) ?
+                                        vm.subarray.band + '-band Receiver Ready' :
+                                        vm.subarray.band + '-band Receiver Not Ready'}}
                                 </md-tooltip>
                             </span>
 
