Rework summation of the total duration

--- a/app/reports/utilisation-report.html
+++ b/app/reports/utilisation-report.html
@@ -212,6 +212,10 @@
                     <span style="width: 100px; text-align: right; margin-left: 16px">{{sb.percentageOfTotal}}</span>
                     <span style="width: 100px; text-align: right; margin-left: 16px">{{sb.n_ants}}</span>
                 </div>
+                <div class="report-section-sub-title-div" layout="row">
+                        <span style="min-width: 100px">Total Duration of All Active Schedule Blocks</span>
+                        <span style="text-align: right; margin-left: 1064px;">{{vm.totalDuration}}</span>
+                </div>
             </div>
         </div>
     </div>
