Realign the display of total active SB duration.

--- a/app/reports/utilisation-report.html
+++ b/app/reports/utilisation-report.html
@@ -187,6 +187,10 @@
         <div layout="column">
             <i style="font-size: 22px; min-height: 42px" class="report-section-title-div">Active Schedule Block Details</i>
             <div class="report-section-sub-title-div" layout="row">
+                <span style="font-size: 18px; min-width: 330px">Total Duration of All Active Schedule Blocks </span>
+                <span style="font-size: 18px; text-align: right; margin-left: 40px">{{vm.totalDuration}}</span>
+            </div>
+            <div class="report-section-sub-title-div" layout="row">
                 <span style="width: 120px">Id Code</span>
                 <span style="width: 150px">Proposal Id</span>
                 <span style="width: 120px">Owner</span>
@@ -211,10 +215,6 @@
                     <span style="width: 100px; text-align: right; margin-left: 16px">{{sb.duration}}</span>
                     <span style="width: 100px; text-align: right; margin-left: 16px">{{sb.percentageOfTotal}}</span>
                     <span style="width: 100px; text-align: right; margin-left: 16px">{{sb.n_ants}}</span>
-                </div>
-                <div class="report-section-sub-title-div" layout="row">
-                        <span style="min-width: 100px">Total Duration of All Active Schedule Blocks</span>
-                        <span style="text-align: right; margin-left: 1064px;">{{vm.totalDuration}}</span>
                 </div>
             </div>
         </div>
