Address PR comments
renamed variables, add totals outside the loop that adds the durations

--- a/app/reports/utilisation-report.html
+++ b/app/reports/utilisation-report.html
@@ -188,7 +188,7 @@
             <i style="font-size: 22px; min-height: 42px" class="report-section-title-div">Active Schedule Block Details</i>
             <div class="report-section-sub-title-div" layout="row">
                 <span style="font-size: 18px; min-width: 330px">Total Duration of All Active Schedule Blocks </span>
-                <span style="font-size: 18px; text-align: right; margin-left: 40px">{{vm.totalDuration}}</span>
+                <span style="font-size: 18px; text-align: right; margin-left: 40px">{{vm.totalSBDuration}}</span>
             </div>
             <div class="report-section-sub-title-div" layout="row">
                 <span style="width: 120px">Id Code</span>
